--- a/app/assets/stylesheets/modules/mypages/_userspage.scss
+++ b/app/assets/stylesheets/modules/mypages/_userspage.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #f5f5f5;
+  background-color: $bg_color;
 }
 .bold{
   font-weight: 600;
@@ -197,7 +197,7 @@ body {
             text-align: center;
           }
           a#gotoAllList-inner:hover{
-            background-color: #F5F5F5;
+            background-color: $bg_color;
             opacity: 0.7;
           }
         }
