--- a/app/assets/stylesheets/modules/_credits.scss
+++ b/app/assets/stylesheets/modules/_credits.scss
@@ -1,12 +1,12 @@
 .chapter-container {
   margin: 40px 120px 0 120px;
-  background-color: #f5f5f5;
+  background-color: $bg_color;
 
 
   .chapter-head {
     font-size: 24px;
     padding: 8px 24px;
-    background-color: #f5f5f5;
+    background-color: $bg_color;
     position: relative;
     max-width: 343px;
     margin: auto;
