--- a/app/assets/stylesheets/modules/products/_exhibition.scss
+++ b/app/assets/stylesheets/modules/products/_exhibition.scss
@@ -4,6 +4,7 @@
     width: 120px;
     height: 116px;
     background: $main_color;
+    box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
     text-align: center;
     border-radius: 4%;
     bottom: 32px;
