--- a/app/assets/stylesheets/modules/users/_registrations.scss
+++ b/app/assets/stylesheets/modules/users/_registrations.scss
@@ -1,8 +1,5 @@
 html {
-  height: 100%;
-  body {
-    height: 100%;
-  }
+  background-color: $bg_color;
 }
 
 .registration-header {
@@ -23,12 +20,10 @@ html {
 }
 
 .container {
-  width: 100%;
   background-color: $bg_color;
-  display: flex;
-  justify-content: center;
   font-size: 14px;
   &__login-panel {
+    margin: 0 auto;
     width: 456px;
     &__registration {
       padding: 40px 64px;
@@ -64,7 +59,10 @@ html {
         background-color: #fff;
       }
       .input-text {
+        border-radius: 4px;
+        border: 1px solid #ccc;
         font-size: 16px;
+        line-height: 1.5;
       }
       a {
         display: block;
@@ -72,7 +70,6 @@ html {
         text-align: left;
         padding: 0;
         color: #0099e8;
-        background-color: #fff;
         margin-top: 40px;
       }
     }
