--- a/app/assets/stylesheets/credits.scss
+++ b/app/assets/stylesheets/credits.scss
@@ -2,7 +2,6 @@
   margin: 40px 120px 0 120px;
   background-color: #f5f5f5;
 
-
   .chapter-head {
     font-size: 24px;
     padding: 8px 24px;
@@ -17,92 +16,101 @@
     border-top: 3px solid #fff;
     padding: 24px 50px 50px 50px;
     margin: auto;
-    
-    &__creditcard-number {
-      &__text {
-        margin: 8px 0 0;
-        display: inline-block;
-        align-items: center;
-        font-weight: 600;
-        font-size: 15px;
-      }
-      &__required {
-        background-color: red;
-        margin: 0 0 0 8px;
-        padding: 2px 4px;
-        border-radius: 2px;
-        color: #fff;
-        font-size: 12px;
-      }
-      
-      &__images {
-        margin: 8px 2px 0 0;
-      }
+    .number {
+      width: 100%;
+      height: 48px;
+      padding: 10px 16px 8px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      background: #fff;
+      line-height: 1.5;
+      font-size: 16px;
     }
-
-    &__expiration-date {
-      &__text {
+    .exp_month{
+      width: 35%;
+      position: relative;
+      z-index: 2;
+      height: 48px;
+      padding: 0 16px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      background: 0;
+      font-size: 16px;
+      line-height: 1.5;
+      cursor: pointer;
+      margin: 0 8px 0 0;
+    }
+    .exp_year {
+      width: 35%;
+      position: relative;
+      z-index: 2;
+      height: 48px;
+      padding: 0 16px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      background: 0;
+      font-size: 16px;
+      line-height: 1.5;
+      cursor: pointer;
+      margin: 0 8px 0 8px;
+    }
+    .cvc {
+      width: 100%;
+      height: 48px;
+      padding: 10px 16px 8px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      background: #fff;
+      line-height: 1.5;
+      font-size: 16px;
+    }
+    .add {
+      display: block;
+      background-color: #ea352d;
+      width: 100%;
+      line-height: 48px;
+      font-size: 14px;
+      border: 1px solid transparent;
+      -webkit-transition: all ease-out .3s;
+      transition: all ease-out .3s;
+      cursor: pointer;
+      text-align: center;
+      margin: 20px 0 0 0 ;
+    }
+    &__credit-number {
       margin: 8px 0 0;
       display: inline-block;
       align-items: center;
       font-weight: 600;
       font-size: 15px;
       }
-      &__required {
-        background-color: red;
-        margin: 0 0 0 8px;
-        padding: 2px 4px;
-        border-radius: 2px;
-        color: #fff;
-        font-size: 12px;
-      }
-      &__box {
-        height: 48px;
-        padding: 10px 16px 8px;
-        border-radius: 4px;
-        border: 1px solid #ccc;
-        background-color: #fff;
-        line-height: 1.5;
-        font-size: 14px;
-        width: 40%;
-      }
-    }
-
-    &__security-card {
-      &__text {
-      margin: 8px 0 0;
-      display: inline-block;
-      align-items: center;
-      font-weight: 600;
-      font-size: 15px;
-      }
-      &__required {
-        background-color: red;
-        margin: 0 0 0 8px;
-        padding: 2px 4px;
-        border-radius: 2px;
-        color: #fff;
-        font-size: 12px;
-      }
-    }
-    .botton {
-      width: 100%;
-    
-    }
-    .input {
-      width: 100%;
-      background-color: #ea352d;
-    }
-    .token_submit {
-
-      background-color: #ea352d;
-      border: 1px solid #ea352d;
-      width: 100%;
+    &__credit-required {
+      background-color: red;
       margin: 0 0 0 8px;
       padding: 2px 4px;
       border-radius: 2px;
+      color: #fff;
       font-size: 12px;
-      
     }
+    &__credit-images {
+      margin: 8px 2px 0 0;
+    }
+    &__expiration-date{
+      width: 100%;
+      position: relative;
+    }
+  }
+}
+
+.credit-group{
+  margin: 40px 120px 0 120px;
+  background-color: #f5f5f5;
+  &__title {
+    font-size: 24px;
+    padding: 8px 24px;
+    background-color: #f5f5f5;
+    position: relative;
+    max-width: 343px;
+    margin: auto;
   }
 }
