connect_address_to_user

--- a/app/views/addresses/_form.html.haml
+++ b/app/views/addresses/_form.html.haml
@@ -1,11 +1,11 @@
 .address-container
-  -if @address.new_record?
+  - if @address.new_record?
     -shaped_postal_code = ""
-  -elsif @address.postal_code == ""
+  - elsif @address.postal_code == ""
     -shaped_postal_code = ""
   - else
     -shaped_postal_code = @address.postal_code.insert(3, "-")
-  = form_for @address do |f|
+  = form_for [@user, @address] do |f|
     %h3 発送元・お届け先住所変更
     .field
       = f.label :name, "お名前"
@@ -39,24 +39,24 @@
       = f.label :city, "市区町村"
       %span.form-require 必須
       %br/
-      = f.text_field :city, placeholder: "横浜市緑区", class: "input-form"
+      = f.text_field :city, placeholder: "例) 横浜市緑区", class: "input-form"
     = render partial: 'addresses/shared/error_messages', locals: {address: @address, column: "city"}
     .field
       = f.label :house_number, "番地"
       %span.form-require 必須
       %br/
-      = f.text_field :house_number, placeholder: "青山1-1-1", class: "input-form"
+      = f.text_field :house_number, placeholder: "例) 青山1-1-1", class: "input-form"
     = render partial: 'addresses/shared/error_messages', locals: {address: @address, column: "house_number"}
     .field
       = f.label :building, "建物名"
       %span.form-require 任意
       %br/
-      = f.text_field :building, placeholder: "柳ビル103", class: "input-form"
+      = f.text_field :building, placeholder: "例) 柳ビル103", class: "input-form"
     .field
       = f.label :phone_number, "電話番号"
       %span.form-require 任意
       %br/
-      = f.text_field :phone_number, placeholder: "090-1234-5678", class: "input-form"
+      = f.text_field :phone_number, placeholder: "例) 090-1234-5678", class: "input-form"
     = render partial: 'addresses/shared/error_messages', locals: {address: @address, column: "phone_number"}
     .field
       = f.submit "変更する"
