--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -94,6 +94,6 @@
           電話番号の確認
           %i.fa.fa-angle-right.icon
       %li
-        -# = link_to logout_credit_path,class:"mypage-nav-list-item" do
-        -#   ログアウト
-        -#   %i.fa.fa-angle-right.icon
+        = link_to '#',class:"mypage-nav-list-item" do
+          ログアウト
+          %i.fa.fa-angle-right.icon
