--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -2,15 +2,38 @@
 %h1 プロダクト#{@product.id}のページです
 %h2 Userid:#{@product.user_id}の商品です
 %br/
+%ul
+  %li
+    = image_tag 'curry.png', alt: '', height: '300', width: '400', class: 'img'
+    %ul
+      %li
+        = image_tag 'curry.png', alt: '', height: '120', width: '160', class: 'sub-img'
+      %li
+        = image_tag 'curry.png', alt: '', height: '120', width: '160', class: 'sub-img'
+      %li
+        = image_tag 'curry.png', alt: '', height: '120', width: '160', class: 'sub-img'
+%br/
+%h1 ¥#{@product.price}
+%br/
+%h2 #{@product.description}
+%br/
 %table
   %tr
-    %th 商品名
+    %th 出品者
     %td 
-      = @product.name
+      = @product.user_id
   %tr
-    %th 商品説明
+    %th カテゴリー
     %td
-      = @product.description
+      = @product.category_id
+  %tr
+    %th ブランド
+    %td
+      = @product.brand
+  %tr
+    %th 商品のサイズ
+    %td
+      = @product.products_size_id
   %tr
     %th 商品の状態
     %td
@@ -20,17 +43,13 @@
     %td
       = @product.shipping_charges
   %tr
-    %th 配送元地域
+    %th 発送元の地域
     %td
       = @product.shipping_area
   %tr
     %th 発送日の目安
     %td
       = @product.days_to_delivery
-  %tr
-    %th 価格
-    %td
-      = @product.price
 %br/
 -if user_signed_in? && current_user.id == @product.user_id
   = link_to "商品の編集画面に進む"
