--- a/app/assets/stylesheets/modules/users/_userspage.scss
+++ b/app/assets/stylesheets/modules/users/_userspage.scss
@@ -249,6 +249,7 @@ body {
             i.fa.fa-angle-right.icon{
               color: $font_color;
               right: 10px;
+              transition: all ease-out .2s;
               top: 13px;
               font-size: 22px;
             }
@@ -258,6 +259,39 @@ body {
       &-head{
         margin-top: 40px;
         font-size: 16px;
+      }
+    }
+  }
+
+  &__main{
+    background-color: white;
+    float: right;
+    width: 700px;
+    &__box{
+      &__title{        
+        &__inner{
+          padding: 64px;
+          &__content{
+            max-width: 320px;
+            margin: 0 auto;
+            &__btn{
+              background: $main_color;
+              border: 1px solid $main_color;
+              color: white;
+              display: block;
+              width: 100%;
+              line-height: 48px;
+              font-size: 14px;
+              transition: all ease-out .3s;
+              cursor: pointer;
+              text-align: center;
+              text-decoration: none;
+              &:hover {
+                opacity: 0.8;
+              }
+            }
+          }
+        }
       }
     }
   }
