--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -2,7 +2,7 @@
   %nav.mypage-nav
     %ul.mypage-nav-list
       %li
-        = link_to '#',class:"mypage-nav-list-item" do
+        = link_to user_path(current_user.id), class:"mypage-nav-list-item" do
           マイページ
           %i.fa.fa-angle-right.icon.active
       %li
@@ -94,6 +94,6 @@
           電話番号の確認
           %i.fa.fa-angle-right.icon
       %li
-        = link_to '#', class:"mypage-nav-list-item" do
+        = link_to logout_users_path, class:"mypage-nav-list-item" do
           ログアウト
           %i.fa.fa-angle-right.icon
