--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -77,6 +77,7 @@
           %p 電話番号
           .form-block
             = f.text_field :phone_number, autocomplete: "tel-national", class: "input-form", placeholder: "電話番号を入力"
+          = render partial: 'users/shared/error_messages', locals: {user: @user, column: "phone_number"}
 
         .container__signup-panel__main__form__btn
           %p 「会員登録」のボタンを押すことにより<a href="#">利用規約</a>に同意したものとみなします
