--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -15,9 +15,19 @@
             .products-contents__main-image__box
               .products-contents__main-image__box-input
                 #image-box
+                  #previews
+                    = if @product.persisted?
+                      = @product.product_images.each_with_index do |image, i|
+                        = image_tag image.image.url, data: { index: i }, width: "100", height: '100'
                   = f.fields_for :product_images do |image|
                     %div{ data: {index: image.index}, class:"js-file_group" }
                       = image.file_field :image, class: 'js-file'
+                      %span.js-remove  削除
+                    = if @product.persisted?
+                      = image.check_box :_destroy, data:{ index: image.index }, class: 'hidden-destroy'
+                    = if @product.persisted?
+                      %div{ data:{ index: product.product_images.count}, class:"js-file_group" }
+                      = file_field_tag :image, name: "product[images_attributes][#{@product.product_images.count}][image]", class: 'js-file'
                       %span.js-remove  削除
         .products-contents__main-border
 
