--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -13,12 +13,12 @@
             最大3枚までアップロードできます
           .products-contents__main-image__box
             .products-contents__main-image__box
+              #previews
+                = if @product.persisted?
+                  = @product.product_images.each do |image|
+                    = image_tag "#{image.image.url}", width: "100", height: '100'
               .products-contents__main-image__box-input
                 #image-box
-                  #previews
-                    = if @product.persisted?
-                      = @product.product_images.each_with_index do |image, i|
-                        = image_tag image.image.url, data: { index: i }, width: "100", height: '100'
                   = f.fields_for :product_images do |image|
                     %div{ data: {index: image.index}, class:"js-file_group" }
                       = image.file_field :image, class: 'js-file'
