--- a/app/views/products/_main.html.haml
+++ b/app/views/products/_main.html.haml
@@ -104,11 +104,9 @@
     .subtitle
       = link_to "新規投稿商品", '#'
     .products
-      - @product_no1.each do |product|
+      - @product.each do |product|
         .products__list 
           .products__list--pic
-            -# 商品詳細ページに飛ぶ
-            -# = link_to show_product_path(product.id) do
             = image_tag "#{product.product_images[0].image_url}",size: '220x150'
           .products__list__discription
             .products__list__discription--name
@@ -121,50 +119,3 @@
                 ★１
             .products__list__discription--tax
               (税込)
-
-  -# 時間があれば追加実装
-  -# .pickupcontainer
-  -#   .head
-  -#     ピックピックアップブランド
-  -#   .subtitle
-  -#     = link_to "アーカイブ", '#'
-  -#   .products
-  -#     .products__list
-  -#       .products__list--pic
-  -#       = image_tag 'fish.png', class: 'archivepic_left',size: '220x150'
-  -#       .products__list__discription
-  -#         .products__list__discription--name
-  -#           prodeuct41
-  -#         .products__list__discription__core
-  -#           .products__list__discription__core--price
-  -#             20000円
-  -#           .products__list__discription__core--good
-  -#             ★１
-  -#         .products__list__discription--tax
-  -#           (税込)
-  -#     .products__list
-  -#       .products__list--pic
-  -#       = image_tag 'fish.png', class: 'archivepic_center',size: '220x150'
-  -#       .products__list__discription
-  -#         .products__list__discription--name
-  -#           prodeuct55
-  -#         .products__list__discription__core
-  -#           .products__list__discription__core--price
-  -#             20000円
-  -#           .products__list__discription__core--good
-  -#             ★１
-  -#         .products__list__discription--tax
-  -#           (税込)
-  -#     .products__list
-  -#       .products__list--pic
-  -#       = image_tag 'fish.png', class: 'archivepic_right',size: '220x150'
-  -#       .products__list__discription
-  -#         .products__list__discription--name
-  -#           prodeuct18
-  -#         .products__list__discription__core
-  -#           .products__list__discription__core--price
-  -#             20000円
-  -#           .products__list__discription__core--good
-  -#             ★１
-  -#         .products__list__discription--tax
-  -#           (税込)
