--- a/app/views/products/_main.html.haml
+++ b/app/views/products/_main.html.haml
@@ -107,6 +107,7 @@
       - @product.each do |product|
         .products__list 
           .products__list--pic
+          = link_to product_path(product.id) do
             = image_tag "#{product.product_images[0].image_url}",size: '220x150'
           .products__list__discription
             .products__list__discription--name
