--- a/app/views/transactions/pay_index.html.haml
+++ b/app/views/transactions/pay_index.html.haml
@@ -30,7 +30,7 @@
               - if @default_card_information.blank?
                 %i.fas.fa-plus-circle
                 %span.icon-register
-                = link_to "登録してください", new_card_path
+                = link_to "登録してください", new_credit_path
               - else
                 = "**** **** **** " + @default_card_information.last4
                 - exp_month = @default_card_information.exp_month.to_s
