商品購入まで

--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -73,15 +73,16 @@
         = link_to '#',class:"mypage-nav-list-item" do
           プロフィール
           %i.fa.fa-angle-right.icon
-      %li
-        - if @user.address == nil
-          = link_to new_user_address_path(@user.id), class:"mypage-nav-list-item" do
-            住所変更
-            %i.fa.fa-angle-right.icon
-        - else
-          = link_to edit_user_address_path(@user.id, @user.address.id), class:"mypage-nav-list-item" do
-            住所変更
-            %i.fa.fa-angle-right.icon
+      //クレジットカード登録できないので一旦コメントアウト
+      -# %li
+      -#   - if @user.address == nil
+      -#     = link_to new_user_address_path(@user.id), class:"mypage-nav-list-item" do
+      -#       住所変更
+      -#       %i.fa.fa-angle-right.icon
+      -#   - else
+      -#     = link_to edit_user_address_path(@user.id, @user.address.id), class:"mypage-nav-list-item" do
+      -#       住所変更
+      -#       %i.fa.fa-angle-right.icon
       %li
         = link_to new_credit_path, class: "mypage-nav-list-item" do
           支払い方法
