--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -35,6 +35,13 @@
 -if user_signed_in? && current_user.id == @product.user_id
   = link_to "商品の編集画面に進む"
   = link_to "出品商品を取り下げる"
--else
-  = link_to "購入画面に進む", pay_index_transactions_path(product_id: @product), class: "product-transaction-btn"
+- else
+  .product-show__transaction
+    .product-show__transaction-box
+      -# 商品購入済みであればSOLD OUT
+      - if @product_id.present?
+        .product-transaction-btn
+          SOLD OUT
+      - else
+        = link_to "購入画面に進む", pay_index_transactions_path(product_id: @product), class: "product-transaction-btn"
 = render "layouts/footer"
