--- a/app/views/transactions/done.html.haml
+++ b/app/views/transactions/done.html.haml
@@ -1,9 +1,11 @@
+= render "layouts/header"
+
 .transaction-done
   .transaction-done__content
     .transaction-done__text
       購入が完了しました！
     .transaction-done__image
-      = image_tag @top_image.image.url, alt:"商品画像", class: "transaction-done__image--img"
+      = image_tag "#{@product.product_images[0].image_url}",size: '220x150'
     .transaction-done__title
       = @product.name
     .transaction-done__price
