--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -11,31 +11,14 @@
               必須
           .products-contents__main-image__text
             最大3枚までアップロードできます
-          .photo_form
-            = f.fields_for :product_images do |i|
-              .img_box_boxs
-                .img_box1
-                .img_box2
-                .img_box3
-              .photo_form_box
-                .photo_display1
-                  = i.label :image, class: "image_label1", for: "image", id: "photo"  do
-                    = i.file_field :image, name: "product[product_images_attributes][0][image]", multipart: true, class: "file_field1", id: "image", style: "color: red"
-                    選択
-                  .remove_btn1
-                    削除
-                .photo_display2
-                  = i.label  :image, class: "image_label2", for: "image2", id: "photo2" do
-                    = i.file_field :image, name: "product[product_images_attributes][1][image]", multipart: true, class: "file_field2", id: "image2", style: "color: brown"
-                    選択
-                  .remove_btn2
-                    削除
-                .photo_display3
-                  = i.label  :image, class: "image_label3", for: "image3", id: "photo3" do
-                    = i.file_field :image, name: "product[product_images_attributes][2][image]", multipart: true, class: "file_field3", id: "image3", style:  "color: blueviolet"
-                    選択
-                  .remove_btn3
-                    削除
+          #image-box
+            #previews
+              = f.fields_for :product_images do |image|
+                .img_box
+                  = image_tag "#{image.object.image_url}",class:"photo_img", width: "100", height: '100'
+                %div{ data: {index: image.index}, class:"js-file_group" }
+                  = image.file_field :image, class: 'js-file', id: "image"
+                  %span.js-remove  削除
         .products-contents__main-border
 
         .products-contents__main-overview
