--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 @import "modules/users/logout";
 @import "modules/credits";
 @import "modules/addresses";
+@import "modules/transactions";
 
 // font
 @import "font-awesome-sprockets";
