--- a/app/views/transactions/pay_index.html.haml
+++ b/app/views/transactions/pay_index.html.haml
@@ -6,51 +6,49 @@
   %h2.transaction-pay__title 
     購入内容の確認
   .transaction-pay__item
-    .transaction-pay__item-box
-      = image_tag "#{@product.product_images[0].image_url}",size: '220x150'
+    .transaction-pay__item--box
+      = image_tag "#{@product.product_images[0].image_url}",size: '120x120'
     .transaction-pay__item-detail
       %p.transaction-pay__item-detail--name
         = @product.name
       .transaction-pay__item-detail-price
         .transaction-pay__item-detail-price--text
-          ￥
-        .transaction-pay__item-detail-price--text
+          ¥
           = @product.price
-        .transaction-pay__item-detail-price--shipping
-          （税込）送料込み
+          (税込) 送料込み
   .transaction-pay__table
-    .transaction-pay__table-inner
-      .transaction-pay__table-form
-        .transaction-pay__table-content
-          .transaction-pay__table-pay
-            %p.transaction-pay__table-pay--title 支払い金額
-          .transaction-pay__table-price
-            %p.transaction-pay__table-price--title
-              ￥
-            %p.transaction-pay__table-price--title
-              = @product.price
-        .transaction-pay__table-way
-          %h3 支払い方法
-          .transaction-pay__table-register
-            - if @default_card_information.blank?
-              %i.fas.fa-plus-circle
-              %span.icon-register
-              = link_to "登録してください", new_credit_path
-            - else
-              = "**** **** **** " + @default_card_information.last4
-              - exp_month = @default_card_information.exp_month.to_s
-              - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
-              = exp_month + " / " + exp_year
-        .transaction-pay__table-buy
-          = form_tag(action: :pay, method: :post, product_id: @product) do
-            %button.transaction-pay__table-buy-button 購入する
+    .transaction-pay__table__content
+      .transaction-pay__table__content--pay
+        %p.transaction-pay__table__content--pay--title
+          支払い金額
+      .transaction-pay__table__content--price
+        %p.transaction-pay__table__content--price--title
+          ¥
+          = @product.price
+    .transaction-pay__table__measure
+      %h3 支払い方法
+      .transaction-pay__table__measure--register
+        - if @default_card_information.blank?
+          %i.fas.fa-plus-circle
+          %span.icon-register
+          = link_to "登録してください", new_credit_path
+        - else
+          = "**** **** **** " + @default_card_information.last4
+          - exp_month = @default_card_information.exp_month.to_s
+          - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
+          = exp_month + " / " + exp_year
+    .transaction-pay__table__buy
+      = form_tag(action: :pay, method: :post, product_id: @product) do
+        %button.transaction-pay__table__buy--button
+          購入する
 
 .transaction-footer
-  .transaction-footer--box
-    =link_to "プライバシーポリシー", '#' , class: 'products-footer__box-text'
-    =link_to "FURIMA利用規約", '#' , class: 'products-footer__box-text'
-    =link_to "特定商取引に関する表記", '#' , class: 'products-footer__box-text'
-    .transaction-footer--image
-      = image_tag 'logo.png', class: 'header_log', size: '185x49'
-      .transaction-footer--chara
+  .transaction-footer__box
+    =link_to "プライバシーポリシー", '#' , class: 'transaction-footer__box-text'
+    =link_to "FURIMA利用規約", '#' , class: 'transaction-footer__box-text'
+    =link_to "特定商取引に関する表記", '#' , class: 'transaction-footer__box-text'
+    .transaction-footer__box__image
+      = link_to root_path do
+        = image_tag 'logo.png', class: 'header_log', size: '185x49'
+      .transaction-footer__box__image--inc
         © FURIMA, Inc.
