--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -12,30 +12,20 @@
           .products-contents__main-image__text
             最大3枚までアップロードできます
           .photo_form
-            = f.fields_for :product_images do |i|
-              .img_box_boxs
-                .img_box1
-                .img_box2
-                .img_box3
-              .photo_form_box
-                .photo_display1
-                  = i.label :image, class: "image_label1", for: "image", id: "photo"  do
-                    = i.file_field :image, name: "product[product_images_attributes][0][image]", multipart: true, class: "file_field1", id: "image", style: "color: red"
+            .img_box_boxs
+              - @product.product_images.each.with_index do |image,i|
+                %div{class: "img_box#{i + 1}"}
+                  = image_tag "#{image.image_url}", class: "photo_img"
+            .photo_form_box
+              - count = 0;
+              = f.fields_for :product_images do |image|
+                %div{class: "photo_display#{count + 1}"}
+                  = image.label :image, class: "image_label#{count + 1}", for: "image#{count + 1}", id: "photo#{count + 1}"  do
+                    = image.file_field :image, multipart: true, class: "file_field#{count + 1}", id: "image#{count + 1}", style: "color: red"
                     選択
-                  .remove_btn1
+                  %div{class: "remove_btn#{count + 1}"}
                     削除
-                .photo_display2
-                  = i.label  :image, class: "image_label2", for: "image2", id: "photo2" do
-                    = i.file_field :image, name: "product[product_images_attributes][1][image]", multipart: true, class: "file_field2", id: "image2", style: "color: brown"
-                    選択
-                  .remove_btn2
-                    削除
-                .photo_display3
-                  = i.label  :image, class: "image_label3", for: "image3", id: "photo3" do
-                    = i.file_field :image, name: "product[product_images_attributes][2][image]", multipart: true, class: "file_field3", id: "image3", style:  "color: blueviolet"
-                    選択
-                  .remove_btn3
-                    削除
+                - count += 1;
         .products-contents__main-border
 
         .products-contents__main-overview
