--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -19,20 +19,20 @@
                 .img_box3
               .photo_form_box
                 .photo_display1
-                  = i.label :image, class: "image_label1", for: "image", id: "photo"  do
-                    = i.file_field :image, name: "product[product_images_attributes][0][image]", multipart: true, class: "file_field1", id: "image", style: "color: red"
+                  = i.label :image, class: "image_label1", for: "image1", id: "photo1"  do
+                    = i.file_field :image, multipart: true, name: "product[product_images_attributes][0][image]", class: "file_field1", id: "image1", style: "color: red"
                     選択
                   .remove_btn1
                     削除
                 .photo_display2
-                  = i.label  :image, class: "image_label2", for: "image2", id: "photo2" do
-                    = i.file_field :image, name: "product[product_images_attributes][1][image]", multipart: true, class: "file_field2", id: "image2", style: "color: brown"
+                  = i.label :image, class: "image_label2", for: "image2", id: "photo2"  do
+                    = i.file_field :image, multipart: true, name: "product[product_images_attributes][1][image]", class: "file_field2", id: "image2", style: "color: blue"
                     選択
                   .remove_btn2
                     削除
                 .photo_display3
-                  = i.label  :image, class: "image_label3", for: "image3", id: "photo3" do
-                    = i.file_field :image, name: "product[product_images_attributes][2][image]", multipart: true, class: "file_field3", id: "image3", style:  "color: blueviolet"
+                  = i.label :image, class: "image_label3", for: "image3", id: "photo3"  do
+                    = i.file_field :image, multipart: true, name: "product[product_images_attributes][2][image]", class: "file_field3", id: "image3", style: "color: gray"
                     選択
                   .remove_btn3
                     削除
