送信ボタンの名称変更
出品 → 変更

--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -146,7 +146,7 @@
               .products-contents__main-sale__profit__box-price
                 —
         .products-contents__main-button
-          = f.submit "出品する", class: "products-contents__main-button-exhibition"
+          = f.submit "変更する", class: "products-contents__main-button-exhibition"
           =link_to "もどる", '/' , class: 'products-contents__main-button-back'
         .products-contents__main-button__foot
           禁止されている行為および出品物を必ずご確認ください。偽ブランド品や盗品物などの販売は犯罪であり、法律により処罰される可能性があります。 また、出品をもちまして加盟店規約に同意したことになります。
