--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -52,7 +52,7 @@
       = Daystag.find(@product.days_to_delivery).name
 %br/
 -if user_signed_in? && current_user.id == @product.user_id
-  = link_to "商品の編集画面に進む"
+  = link_to "商品の編集画面に進む", edit_product_path(product_id: @product)
   = link_to "出品商品を取り下げる"
 - else
   .product-show__transaction
