--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -83,7 +83,7 @@
             住所変更
             %i.fa.fa-angle-right.icon
       %li
-        = link_to new_credit_path, class: "mypage-nav-list-item" do
+        = link_to new_credit_path(@user), class: "mypage-nav-list-item" do
           支払い方法
           %i.fa.fa-angle-right.icon
       %li
